--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
+        "build:prod": "NODE_ENV=production vite build",
+        "build:optimized": "node build-optimize.js",
         "lint": "eslint .",
         "preview": "vite preview"
     },
@@ -25,7 +27,7 @@
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
         "@types/react-map-gl": "^6.1.7",
-        "@vitejs/plugin-react": "^4.3.4",
+        "@vitejs/plugin-react": "^4.0.0",
         "eslint": "^9.24.0",
         "eslint-config-prettier": "^10.1.1",
         "eslint-plugin-prettier": "^5.2.6",
@@ -33,8 +35,9 @@
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^15.15.0",
         "prettier": "^3.5.3",
+        "terser": "^5.43.1",
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.24.1",
-        "vite": "^6.2.0"
+        "vite": "^4.5.0"
     }
 }
