--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
         "build:prod": "NODE_ENV=production vite build",
         "build:optimized": "node build-optimize.js",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview --host 0.0.0.0 --port $PORT"
     },
     "dependencies": {
         "@emotion/react": "^11.14.0",
