--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
       yarn build:prod
     startCommand: |
       cd frontend
-      yarn preview --host 0.0.0.0 --port $PORT
+      yarn preview
     envVars:
       - key: NODE_ENV
         value: production
