--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,9 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "build:prod": "NODE_ENV=production vite build",
+        "dev": "npx vite",
+        "build": "npx vite build",
+        "build:prod": "NODE_ENV=production npx vite build",
         "build:optimized": "node build-optimize.js",
         "lint": "eslint .",
         "preview": "npx vite preview --host 0.0.0.0 --port ${PORT:-10000}"
